(install
 (section
  (site
   (minesweeper images)))
 (files
  "1mines.png"
  "2mines.png"
  "3mines.png"
  "4mines.png"
  "5mines.png"
  "6mines.png"
  "7mines.png"
  "8mines.png"
  "exploded.png"
  "flag.png"
  "mine.png"
  "ship9.png"
  "ship14.png"
  "ship1_x2.png"
  "ship2_x2.png"
  "ship3_x2.png"
  "ship9_x2.png"
  "ship9_x4.png"
  "circle.png"
  "grid.txt"))

(install
 (section
  (site
   (minesweeper grids)))
 (files
  "grid.txt"))


